// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RxJs Operators should be created 1`] = `
Array [
  Object {
    "val": "abc",
  },
  Object {
    "val": 456,
  },
]
`;

exports[`RxJs Operators should findById 1`] = `
Object {
  "id": 2,
  "subData": Array [
    Object {
      "val": "abc",
    },
    Object {
      "val": 456,
    },
  ],
}
`;

exports[`RxJs Operators should firstRecord 1`] = `
Object {
  "id": 1,
  "subData": Array [
    Object {
      "val": "xyz",
    },
    Object {
      "val": 123,
    },
  ],
}
`;
